@startuml
package Catalogue {

    interface CatalogSortStrategy {
        + sort(produits : List<Produit>) : List<Produit>
    }

    class SortByPrice
    class SortByCategory
    class SortByBrand
    class SortByPrestige

    CatalogSortStrategy <|.. SortByPrice
    CatalogSortStrategy <|.. SortByBrand
    CatalogSortStrategy <|.. SortByCategory
    CatalogSortStrategy <|.. SortByPrestige

    class CatalogueService {
        - strategy : CatalogSortStrategy
        + setStrategy(strategy)
        + getCatalogue()
    }

    CatalogueService --> CatalogSortStrategy : utilise
}
@enduml